// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tag On Post|TagContainer admin 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TagContainer
    isAdmin={true}
    onTagListUpdateCallback={[Function]}
    postId="0"
    tagList={
      Array [
        Object {
          "id": "0",
          "text": "Habitat et SDF",
        },
        Object {
          "id": "1",
          "text": "Facilitation",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="title"
        >
          Ajoutez des mots-clés relatifs à ce post :
        </div>,
        <div
          className="tag-list"
        >
          <Connect(Apollo(Apollo(Component)))
            alreadyAddedWarningMessage="Déja ajouté"
            isAdmin={true}
            onTagListUpdateCallback={[Function]}
            postId="0"
            tagsList={
              Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ]
            }
          />
        </div>,
      ],
      "className": "tag-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Ajoutez des mots-clés relatifs à ce post :",
          "className": "title",
        },
        "ref": null,
        "rendered": "Ajoutez des mots-clés relatifs à ce post :",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Connect(Apollo(Apollo(Component)))
            alreadyAddedWarningMessage="Déja ajouté"
            isAdmin={true}
            onTagListUpdateCallback={[Function]}
            postId="0"
            tagsList={
              Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ]
            }
          />,
          "className": "tag-list",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alreadyAddedWarningMessage": "Déja ajouté",
            "isAdmin": true,
            "onTagListUpdateCallback": [Function],
            "postId": "0",
            "tagsList": Array [
              Object {
                "id": "0",
                "text": "Habitat et SDF",
              },
              Object {
                "id": "1",
                "text": "Facilitation",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="title"
          >
            Ajoutez des mots-clés relatifs à ce post :
          </div>,
          <div
            className="tag-list"
          >
            <Connect(Apollo(Apollo(Component)))
              alreadyAddedWarningMessage="Déja ajouté"
              isAdmin={true}
              onTagListUpdateCallback={[Function]}
              postId="0"
              tagsList={
                Array [
                  Object {
                    "id": "0",
                    "text": "Habitat et SDF",
                  },
                  Object {
                    "id": "1",
                    "text": "Facilitation",
                  },
                ]
              }
            />
          </div>,
        ],
        "className": "tag-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Ajoutez des mots-clés relatifs à ce post :",
            "className": "title",
          },
          "ref": null,
          "rendered": "Ajoutez des mots-clés relatifs à ce post :",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Connect(Apollo(Apollo(Component)))
              alreadyAddedWarningMessage="Déja ajouté"
              isAdmin={true}
              onTagListUpdateCallback={[Function]}
              postId="0"
              tagsList={
                Array [
                  Object {
                    "id": "0",
                    "text": "Habitat et SDF",
                  },
                  Object {
                    "id": "1",
                    "text": "Facilitation",
                  },
                ]
              }
            />,
            "className": "tag-list",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alreadyAddedWarningMessage": "Déja ajouté",
              "isAdmin": true,
              "onTagListUpdateCallback": [Function],
              "postId": "0",
              "tagsList": Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Storyshots Tag On Post|TagContainer default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TagContainer
    isAdmin={false}
    onTagListUpdateCallback={[Function]}
    postId="0"
    tagList={
      Array [
        Object {
          "id": "0",
          "text": "Habitat et SDF",
        },
        Object {
          "id": "1",
          "text": "Facilitation",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="title"
        >
          Mots-clés relatifs à ce post :
        </div>,
        <div
          className="tag-list"
        >
          <Connect(Apollo(Apollo(Component)))
            alreadyAddedWarningMessage="Déja ajouté"
            isAdmin={false}
            onTagListUpdateCallback={[Function]}
            postId="0"
            tagsList={
              Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ]
            }
          />
        </div>,
      ],
      "className": "tag-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Mots-clés relatifs à ce post :",
          "className": "title",
        },
        "ref": null,
        "rendered": "Mots-clés relatifs à ce post :",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Connect(Apollo(Apollo(Component)))
            alreadyAddedWarningMessage="Déja ajouté"
            isAdmin={false}
            onTagListUpdateCallback={[Function]}
            postId="0"
            tagsList={
              Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ]
            }
          />,
          "className": "tag-list",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alreadyAddedWarningMessage": "Déja ajouté",
            "isAdmin": false,
            "onTagListUpdateCallback": [Function],
            "postId": "0",
            "tagsList": Array [
              Object {
                "id": "0",
                "text": "Habitat et SDF",
              },
              Object {
                "id": "1",
                "text": "Facilitation",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="title"
          >
            Mots-clés relatifs à ce post :
          </div>,
          <div
            className="tag-list"
          >
            <Connect(Apollo(Apollo(Component)))
              alreadyAddedWarningMessage="Déja ajouté"
              isAdmin={false}
              onTagListUpdateCallback={[Function]}
              postId="0"
              tagsList={
                Array [
                  Object {
                    "id": "0",
                    "text": "Habitat et SDF",
                  },
                  Object {
                    "id": "1",
                    "text": "Facilitation",
                  },
                ]
              }
            />
          </div>,
        ],
        "className": "tag-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Mots-clés relatifs à ce post :",
            "className": "title",
          },
          "ref": null,
          "rendered": "Mots-clés relatifs à ce post :",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Connect(Apollo(Apollo(Component)))
              alreadyAddedWarningMessage="Déja ajouté"
              isAdmin={false}
              onTagListUpdateCallback={[Function]}
              postId="0"
              tagsList={
                Array [
                  Object {
                    "id": "0",
                    "text": "Habitat et SDF",
                  },
                  Object {
                    "id": "1",
                    "text": "Facilitation",
                  },
                ]
              }
            />,
            "className": "tag-list",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alreadyAddedWarningMessage": "Déja ajouté",
              "isAdmin": false,
              "onTagListUpdateCallback": [Function],
              "postId": "0",
              "tagsList": Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Storyshots Tag On Post|TagContainer playground 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TagContainer
    isAdmin={false}
    onTagListUpdateCallback={[Function]}
    postId="0"
    tagList={
      Array [
        Object {
          "id": "0",
          "text": "Habitat et SDF",
        },
        Object {
          "id": "1",
          "text": "Facilitation",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="title"
        >
          Mots-clés relatifs à ce post :
        </div>,
        <div
          className="tag-list"
        >
          <Connect(Apollo(Apollo(Component)))
            alreadyAddedWarningMessage="Déja ajouté"
            isAdmin={false}
            onTagListUpdateCallback={[Function]}
            postId="0"
            tagsList={
              Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ]
            }
          />
        </div>,
      ],
      "className": "tag-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Mots-clés relatifs à ce post :",
          "className": "title",
        },
        "ref": null,
        "rendered": "Mots-clés relatifs à ce post :",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Connect(Apollo(Apollo(Component)))
            alreadyAddedWarningMessage="Déja ajouté"
            isAdmin={false}
            onTagListUpdateCallback={[Function]}
            postId="0"
            tagsList={
              Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ]
            }
          />,
          "className": "tag-list",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alreadyAddedWarningMessage": "Déja ajouté",
            "isAdmin": false,
            "onTagListUpdateCallback": [Function],
            "postId": "0",
            "tagsList": Array [
              Object {
                "id": "0",
                "text": "Habitat et SDF",
              },
              Object {
                "id": "1",
                "text": "Facilitation",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="title"
          >
            Mots-clés relatifs à ce post :
          </div>,
          <div
            className="tag-list"
          >
            <Connect(Apollo(Apollo(Component)))
              alreadyAddedWarningMessage="Déja ajouté"
              isAdmin={false}
              onTagListUpdateCallback={[Function]}
              postId="0"
              tagsList={
                Array [
                  Object {
                    "id": "0",
                    "text": "Habitat et SDF",
                  },
                  Object {
                    "id": "1",
                    "text": "Facilitation",
                  },
                ]
              }
            />
          </div>,
        ],
        "className": "tag-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Mots-clés relatifs à ce post :",
            "className": "title",
          },
          "ref": null,
          "rendered": "Mots-clés relatifs à ce post :",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Connect(Apollo(Apollo(Component)))
              alreadyAddedWarningMessage="Déja ajouté"
              isAdmin={false}
              onTagListUpdateCallback={[Function]}
              postId="0"
              tagsList={
                Array [
                  Object {
                    "id": "0",
                    "text": "Habitat et SDF",
                  },
                  Object {
                    "id": "1",
                    "text": "Facilitation",
                  },
                ]
              }
            />,
            "className": "tag-list",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alreadyAddedWarningMessage": "Déja ajouté",
              "isAdmin": false,
              "onTagListUpdateCallback": [Function],
              "postId": "0",
              "tagsList": Array [
                Object {
                  "id": "0",
                  "text": "Habitat et SDF",
                },
                Object {
                  "id": "1",
                  "text": "Facilitation",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
